# ChangeLog for games-emulation/snes9x-gtk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p61.ebuild,
  +files/snes9x-gtk-1.51_p61-as-needed.patch,
  +files/snes9x-gtk-1.51_p61-string-literal.patch:
  Added missing dep and two patches from Mandrake PLF.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Fixed Manifest

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +metadata.xml:
  Added metadata.xml.

  19 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p61.ebuild:
  Fixed trailing whitespace.

  15 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p61.ebuild:
  Initial ebuild.
