@@ -1,6 +1,8 @@
 AUX snes9x-gtk-1.51_p61-as-needed.patch 813 RMD160 1dc8ddf0d63752e6dbd0874cb0d7f1daf39c480e SHA1 da5268a5ad4c6d76e0cf6ef034c498e2538c613c SHA256 39badbc9ef7408f7429cc21db91eae3ddeb151fadaa5dfab637e2462fe570bc5
 AUX snes9x-gtk-1.51_p61-string-literal.patch 1025 RMD160 4d5decabbf4ec384a5fda64c80de0d8aa80f1d1b SHA1 c877c669a415db8952e8f7bdb4975f4cc9e0233d SHA256 9a569adcb41b399bd7bed14215f53a4f7a86263ed17c494994e583aa360a7661
 DIST snes9x-1.51-src-gtk-61.tar.bz2 931864 RMD160 4aeb17ccd25016cbe784b7cf7d79c9c6349b3a79 SHA1 16d749f6f9be9f9a63df5e11d6f699a7614c9f7a SHA256 9190c12f0d2ac47b2b966b2ce67f0eae7d5a8c80fbfffff160babae91026e4af
+DIST snes9x-1.51-src-gtk-62.tar.bz2 932048 RMD160 e9edab84710f2852dda4595a471b23a83346f6b8 SHA1 bbbcd15462e13e7cab5517f7a7b54ecca5f3bc59 SHA256 2f066cc662cabe519bbbfebee6d850c5e8a8943e963c9f615442fa143aa1bcf0
 EBUILD snes9x-gtk-1.51_p61.ebuild 1323 RMD160 a559d72e58e918581818535601e52b6ffc70323b SHA1 8d98a2aca086df7afdeb7189351ed3da7dc70499 SHA256 754f7e052fa63ed6a7efc689827f6b3bb10316bb7acac4da65950c7009370e71
-MISC ChangeLog 727 RMD160 a3e7c262a520d65deab9e3e9dc3205f5339d265c SHA1 81af41b7a736f1bf760e81ff9d161d05d37ea84c SHA256 81350e838929bc4fafc0d84e0608a6ceb6afb3988f11bf4fff07fcaeed8a7038
+EBUILD snes9x-gtk-1.51_p62.ebuild 1343 RMD160 3865c9cb02e3f1e70df37a600c2279829707198c SHA1 e32a65f9e3d619318474224290f5ff595842125f SHA256 5b280e8063f69dca36e090d5ef6abb986455571e03b48f5a57ad5b4ff3646937
+MISC ChangeLog 818 RMD160 efdf76d4276abb24c36bc683718f3444ce6da5ae SHA1 b2efadd4c3b8b2e0e0cba33a1abe499ddcabffed SHA256 c60066a0a6c525ed9c69d1c338bfa703cf7acf0924ad0aafbd16d99c0ee012b8
 MISC metadata.xml 429 RMD160 e989b45bc0cab3e17cac7c1be9e1fe9870360f62 SHA1 cb2a3b86ae0263528cc264a49284970ebfb59e34 SHA256 ef699c4686427718434f4be182f5bdd768c54f118cc920224ce0f256aa8390d5
