@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  +snes9x-gtk-1.51_p62.ebuild:
+  Bumped.
+
   22 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p61.ebuild,
   +files/snes9x-gtk-1.51_p61-as-needed.patch,
   +files/snes9x-gtk-1.51_p61-string-literal.patch:
